# pjsua2-pybind11

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json.in  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
scripts/: build-wheel-manylinux.sh
src/: py_account.hh  py_call.hh  py_logwriter.hh  py_persistent_object.hh  py_pjsua2.cc
